--- a/src/app/page-weather/page-weather.component.html
+++ b/src/app/page-weather/page-weather.component.html
@@ -1,21 +1,27 @@
 <div id="divWeatherMain" class="page-weather">
     <div class="page-weather__header">
-        <button type="button">
-            <img src="../../assets/icons/Other/Back.svg" alt="Назад">
+        <!-- Сделать кнопки с картинками -->
+        <button type="button" [routerLink]="['/']" src="">
+            <svg-icon icon="Back" class="icon icon_back" alt="Назад>"></svg-icon>
         </button>
-        <!-- <form [formGroup]="form" novalidate>
-            <input type="checkbox" formControlName="bookmark" onChange="this.form.submit()">
-        </form> -->
-            <!-- <img src="../../assets/icons/Other/Bookmark.svg" alt="Закладка"> -->
-
+        <button >
+            <input type="checkbox" (click)="check($event)" [checked]="checkActive()">
+            <svg-icon icon="{{bookmark}}" class="icon icon_bookmark" alt="В закладки>"></svg-icon>
+        </button>
     </div>
     <div class="page-weather__container">
         <div class="page-weather__item page-weather__item_city">{{ city?.name }}</div> 
-        <div class="page-weather__item">{{ city?.description }}</div>
+        <div class="page-weather__item page-weather__item_description">{{ city?.description }}</div>
         <div class="page-weather__item page-weather__item_temp">
-            <p class="item_temp">{{ city?.temp }}°</p>
+            <p class="item_temp">{{ city?.temp  }}°</p>
         </div>
-        <div class="page-weather__item">{{ city?.pressure }} мм рт. ст.</div>
+        <div class="page-weather__item page-weather__item_icon">
+            <svg-icon icon="{{ city?.icon }}" class="icon icon_weather"></svg-icon>
+        </div>
+        <div class="page-weather__item page-weather__item_pressure">
+            <svg-icon icon="Barometer" class="icon icon_barometer" alt="Барометр>"></svg-icon>
+            <p class="item_pressure">{{ city?.pressure }} мм рт. ст.</p>
+        </div>
         <div class="page-weather__item">Закат в {{ city?.sunset }}</div> 
     </div>
 </div>
